--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }
 console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 js-sys = "0.3.35"
+wasm-bindgen-futures = "0.4"
+futures = { version = "0.3", feature = ["PromiseResolver"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.8"
@@ -31,5 +33,6 @@ features = [
   "HtmlImageElement",
   "NodeList",
   "MouseEvent",
-  "CssStyleDeclaration"
+  "CssStyleDeclaration",
+  "HtmlInputElement"
 ]
